@@ -21,17 +21,20 @@
         "frameAncestor": "data-tryxpath-frame-ancestor"
     };
 
-    function loadDefaultCss(callback) {
-        var req = new XMLHttpRequest();
-        req.open("GET", browser.runtime.getURL("/css/try_xpath_insert.css"));
-        req.responseType = "text";
-        req.onreadystatechange = function () {
-            if (req.readyState === XMLHttpRequest.DONE) {
-                callback(req.responseText);
-            }
-        };
-        req.send();
-    };
+    function loadDefaultCss() {
+        return new Promise((resolve, reject) => {
+            var req = new XMLHttpRequest();
+            req.open("GET",
+                     browser.runtime.getURL("/css/try_xpath_insert.css"));
+            req.responseType = "text";
+            req.onreadystatechange = function () {
+                if (req.readyState === XMLHttpRequest.DONE) {
+                    resolve(req.responseText);
+                }
+            };
+            req.send();
+        });
+    }
 
     function genericListener(message, sender, sendResponse) {
         var listener = genericListener.listeners[message.event];
@@ -123,12 +126,12 @@
     }).then(items => {
         attributes = items.attributes;
         if (items.css !== null) {
-            css = items.css;
+            return items.css;
         } else {
-            loadDefaultCss(text => {
-                css = text;
-            });
+            return loadDefaultCss();
         }
+    }).then(loadedCss => {
+        css = loadedCss;
     }).catch(fu.onError);
 
 })(window);
