@@ -3,6 +3,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<script src="../scripts/try_xpath_functions.js"></script>
 <script src="options.js"></script>
 </head>
 
